--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">Search</string>
     <string name="profile">Profile</string>
+    <string name="following">Following</string>
+    <string name="followers">Followers</string>
 
 </resources>
