--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="loading_tweets">Loading tweets!</string>
     <string name="no_more_tweet">No more Tweet for you!!</string>
     <string name="load_tweets_error">Could not load Tweets. Please check your internet connection</string>
+    <string name="load_users_error">Could not load Users. Please check your internet connection</string>
     <string name="retry">Retry</string>
     <string name="cant_compose">Can\'t send a Tweet when you\'re offline!</string>
 
