Added friend requests from ProfileActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="profile">Profile</string>
     <string name="following">Following</string>
     <string name="followers">Followers</string>
+    <string name="send_follow_request">Send Follow Request</string>
 
 </resources>
